[omnibox] Render replacement drop cursor using selection

The replacement drop cursor was being drawn with a rectangle
in the background selection color but the text was unchanged,
causing contrast problems in some environments.  This fix
renders the text using standard selection machinery so the
background and foreground colors change together.

Bug: 853678
Change-Id: Ia641ada5100f0b88173ff6b21e776ab686553f96
Reviewed-on: https://chromium-review.googlesource.com/1106697
Commit-Queue: Orin Jaworski <orinj@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569069}
Former-commit-id: 9cc3021383c1daeca3d92f6832522ddf2e0a3709